2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#149133 - Remove doc files from hildon-home deb

	* debian/rules: disable dh_installdocs.

2009-12-14  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.60.

2009-12-14  Jan Arne Petersen  <jpetersen@openismus.com>

	Strip spaces in path values from keyfiles

	Fixes: NB#148916 - Hildon-home crashes always when trying to change
	custom wallpaper

	* src/hd-imageset-background.c: Strip spaces in path values.

2009-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.59

2009-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Add support for wallpaper backgrounds.

	Fixes: NB#145131 - Support full size background jpeg files

	* src/Makefile.am:
	* src/hd-activate-views-dialog.c:
	* src/hd-background.c:
	* src/hd-background.h:
	* src/hd-backgrounds.c:
	* src/hd-backgrounds.h:
	* src/hd-change-background-dialog.c:
	* src/hd-dbus-utils.c:
	* src/hd-dbus-utils.h:
	* src/hd-led-pattern.c:
	* src/hd-pixbuf-utils.c:
	* src/hd-pixbuf-utils.h:
	* src/hd-search-service.c:
	* src/hd-search-service.h:
	* src/hd-wallpaper-background.c:
	* src/hd-wallpaper-background.h: Add support for wallpaper
	backgrounds.

2009-12-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Do not install /usr/share/doc files.

	Fixes: NB#149133 - Remove doc files from hildon-home deb.

	* debian/rules (DEB_DH_INSTALLCHANGELOGS_ARGS): Do not generate
	/usr/share/doc/*/changelog.gz files.

2009-12-01  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#142790 - Group chat invitation notifications are not
	implemented

	* src/notification-groups.conf: Add chat-invitation category.

2009-12-01  Jan Arne Petersen  <jpetersen@openismus.com>

	Add support for live search in dialogs.

	* src/hd-applet-manager.c:
	* src/hd-bookmark-widgets.c:
	* src/hd-shortcut-widgets.c:
	* src/hd-widgets.c:
	* src/hd-widgets.h: Add get_text_column method.

	* src/hd-install-widgets-dialog.c: Set "text-column" property
