@@ -1,5 +1,11 @@
 2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	Fixes: NB#150971 - hildon-home crashed while changing background.
+
+	* src/hd-available-backgrounds.c: Unref models correctly.
+
+2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	Fixes: NB#149133 - Remove doc files from hildon-home deb
 
 	* debian/rules: disable dh_installdocs.
